force-app/main/default/objects/AddressDetail__c/fields/GPA_Premise_short_name__c.field-meta.xml
<CustomField>
    <fullName>GPA_Premise_short_name__c</fullName>
    <label>GPA Premise short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>