force-app/main/default/objects/AddressDetail__c/fields/GPA_Street_number_long_name__c.field-meta.xml
<CustomField>
    <fullName>GPA_Street_number_long_name__c</fullName>
    <label>GPA Street number long name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>