force-app/main/default/objects/AddressDetail__c/fields/GPA_Sublocality_level_2_short_name__c.field-meta.xml
<CustomField>
    <fullName>GPA_Sublocality_level_2_short_name__c</fullName>
    <label>GPA Sublocality level 2 short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>