force-app/main/default/objects/AddressDetail__c/fields/GPA_Was_modified_manually__c.field-meta.xml
<CustomField>
    <fullName>GPA_Was_modified_manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPA Was modified manually</label>
    <type>Checkbox</type>
</CustomField>