force-app/main/default/objects/AddressDetail__c/fields/LatLng__c.field-meta.xml
<CustomField>
    <fullName>LatLng__c</fullName>
    <inlineHelpText>Latitude &amp; Longitude related to this address</inlineHelpText>
    <label>Coordinates</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>