force-app/main/default/objects/AddressDetail__c/fields/LocalityCode__c.field-meta.xml
<CustomField>
    <fullName>LocalityCode__c</fullName>
    <label>XAL LocalityCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>