force-app/main/default/objects/AddressDetail__c/fields/LocalityDevName__c.field-meta.xml
<CustomField>
    <fullName>LocalityDevName__c</fullName>
    <label>XAL LocalityDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>