force-app/main/default/objects/AddressDetail__c/fields/LocalityName__c.field-meta.xml
<CustomField>
    <fullName>LocalityName__c</fullName>
    <label>XAL LocalityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>