force-app/main/default/objects/AddressDetail__c/fields/LocalityType__c.field-meta.xml
<CustomField>
    <fullName>LocalityType__c</fullName>
    <label>XAL LocalityType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>