force-app/main/default/objects/AddressDetail__c/fields/MapImage__c.field-meta.xml
<CustomField>
    <fullName>MapImage__c</fullName>
    <formula>IF(ISBLANK( SignedGoogleMapsPathRequest__c ), &quot;This address has no coordinates&quot;, IMAGE(SignedGoogleMapsPathRequest__c, &quot;unable to load&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map</label>
    <type>Text</type>
</CustomField>