force-app/main/default/objects/AddressDetail__c/fields/Migrated_By__c.field-meta.xml
<CustomField>
    <fullName>Migrated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Migrated By - Data Migration user created to use for data migrations only.
https://jira.deliveryhero.com/browse/SP-2884</description>
    <label>Migrated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>