force-app/main/default/objects/AddressDetail__c/fields/Migrated_From_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Migrated_From_Source_System__c</fullName>
    <label>Migrated From/Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Migrated_From_Source_System</valueSetName>
    </valueSet>
</CustomField>