force-app/main/default/objects/AddressDetail__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Migration ID - Unique ID from source system - Define the field type be unique
https://jira.deliveryhero.com/browse/SP-2884</description>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>