force-app/main/default/objects/AddressDetail__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>IF(CONTAINS(&quot;CZ&quot;, Account__r.Account_Country_Code__c),
  &quot;XAL&quot;,
  IF(AND(ISBLANK( CountryDevName__c ), OR( NOT(ISBLANK( GPA_Country_short_name__c )), NOT(ISBLANK( GPA_Country_long_name__c )))),
    &quot;GPA&quot;,
    IF(AND(ISBLANK( GPA_Country_short_name__c ), NOT(ISBLANK( CountryDevName__c ))),
      &quot;XAL&quot;,
      &quot;&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>