force-app/main/default/objects/AddressDetail__c/fields/ON_Upsertable__c.field-meta.xml
<CustomField>
    <fullName>ON_Upsertable__c</fullName>
    <description>Upsertable if the type of address is Billing Address</description>
    <formula>IF( INClUDES(Type__c,&quot;Billing Address&quot;),TRUE, FALSE)
&amp;&amp;
OR(Account__r.RecordType.DeveloperName = &apos;FI_Account&apos;,Account__r.RecordType.DeveloperName = &apos;SE_Account&apos;)
&amp;&amp;
Account__r.ON_Upsertable__c
&amp;&amp; 
NOT(ISNULL(Account__r.ON_LastUpsert__c))</formula>
    <inlineHelpText>Upsertable if the type of address is Billing Address</inlineHelpText>
    <label>Connector: Upsertable</label>
    <type>Checkbox</type>
</CustomField>