force-app/main/default/objects/AddressDetail__c/fields/ON_UpsertForgotten__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertForgotten__c</fullName>
    <description>This is used to find records which were not transferred although they were changed. (If the process was temporarily inactive etc.).</description>
    <formula>ON_LastModified__c - ON_LastUpsert__c &gt; 0.0006</formula>
    <inlineHelpText>This is used to find records which were not transferred although they were changed. (If the process was temporarily inactive etc.).</inlineHelpText>
    <label>Connector: Upsert Forgotten</label>
    <type>Checkbox</type>
</CustomField>