force-app/main/default/objects/AddressDetail__c/fields/ON_UpsertNew__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertNew__c</fullName>
    <formula>ISBLANK(ON_LastUpsert__c)</formula>
    <label>Connector: Upsert New</label>
    <type>Checkbox</type>
</CustomField>