force-app/main/default/objects/AddressDetail__c/fields/PostalCodeDevName__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeDevName__c</fullName>
    <label>XAL PostalCodeDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>