force-app/main/default/objects/AddressDetail__c/fields/PostalCodeName__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeName__c</fullName>
    <label>XAL PostalCodeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>