force-app/main/default/objects/AddressDetail__c/fields/SignedGoogleMapsPathRequest__c.field-meta.xml
<CustomField>
    <fullName>SignedGoogleMapsPathRequest__c</fullName>
    <description>Signed Google Maps Static API url path and request based on lat/lng of the inserted address. More info here https://developers.google.com/maps/documentation/static-maps/get-api-key#generating_valid_signatures</description>
    <label>GPA SignedGoogleMapsPathRequest</label>
    <type>Url</type>
</CustomField>