force-app/main/default/objects/AddressDetail__c/fields/Street_with_number__c.field-meta.xml
<CustomField>
    <fullName>Street_with_number__c</fullName>
    <description>Used only for JustOn integration. When JustOn will be gone please remove it</description>
    <formula>IF(Model__c = &quot;GPA&quot;, GPA_Route_long_name__c + &quot; &quot; + GPA_Street_number_long_name__c, &quot;&quot;)</formula>
    <label>GPA Street with number</label>
    <type>Text</type>
</CustomField>