force-app/main/default/objects/AddressDetail__c/fields/SubAdministrativeAreaCode__c.field-meta.xml
<CustomField>
    <fullName>SubAdministrativeAreaCode__c</fullName>
    <label>XAL SubAdministrativeAreaCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>