force-app/main/default/objects/AddressDetail__c/fields/SubAdministrativeAreaName__c.field-meta.xml
<CustomField>
    <fullName>SubAdministrativeAreaName__c</fullName>
    <label>XAL SubAdministrativeAreaName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>