force-app/main/default/objects/AddressDetail__c/fields/SubAdministrativeAreaType__c.field-meta.xml
<CustomField>
    <fullName>SubAdministrativeAreaType__c</fullName>
    <label>XAL SubAdministrativeAreaType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>