force-app/main/default/objects/AddressDetail__c/fields/SubAdministratriveAreaDevName__c.field-meta.xml
<CustomField>
    <fullName>SubAdministratriveAreaDevName__c</fullName>
    <label>XAL SubAdministratriveAreaDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>