force-app/main/default/objects/AddressDetail__c/fields/Translated_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Area_Name__c</fullName>
    <label>Local Area Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>