force-app/main/default/objects/AddressDetail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Shipping Address</fullName>
            </value>
            <value>
                <fullName>Restaurant Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>