force-app/main/default/objects/AddressDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AddressLine__c</columns>
    <columns>FormattedAddress__c</columns>
    <columns>GPA_formatted_address__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>